# domain-manager

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  domain_manager.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
domain_manager/: __init__.py  __main__.py  cli.py  core.py  lang.py
domain_manager/providers/: __init__.py  aliyun.py  bunny.py  cloudflare.py  digitalocean.py  dnsimple.py  domaincom.py  duckdns.py  dynu.py  gandi.py  godaddy.py  hetzner.py  namecheap.py  namesilo.py  noip.py  ovh.py  porkbun.py  registry.py  tencentcloud.py  vultr.py
examples/: ddns-crontab.txt  tesla-integration.md
hermes-skill/: SKILL.md
