[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-manager"
version = "1.1.0"
description = "Unified CLI for 20+ domain/DNS providers — list domains, manage DNS, auto-update DDNS"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Monah Limited", email = "oss@monah.ai"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
]

[project.scripts]
domain-manager = "domain_manager.cli:main"

[project.urls]
Homepage = "https://github.com/monah-studio/domain-manager"
Repository = "https://github.com/monah-studio/domain-manager"
Issues = "https://github.com/monah-studio/domain-manager/issues"
